--- a/app/src/main/res/drawable/ic_add_profile_image.xml
+++ b/app/src/main/res/drawable/ic_add_profile_image.xml
@@ -1,31 +1,17 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="32dp"
     android:height="32dp"
     android:viewportWidth="32"
     android:viewportHeight="32">
     <path
+        android:fillColor="#2BB0E8"
         android:pathData="M16,30.5C12.1269,30.5 8.4856,28.9917 5.747,26.253C3.0083,23.5144 1.5,19.8731 1.5,16C1.5,12.1269 3.0083,8.4856 5.747,5.747C8.4856,3.0083 12.1269,1.5 16,1.5C19.8731,1.5 23.5144,3.0083 26.253,5.747C28.9917,8.4856 30.5,12.1269 30.5,16C30.5,19.8731 28.9917,23.5144 26.253,26.253C23.5144,28.9917 19.8731,30.5 16,30.5Z"
-        android:strokeColor="#00000000">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="30.5"
-                android:endY="16"
-                android:startX="5.096"
-                android:startY="16"
-                android:type="linear">
-                <item
-                    android:offset="0" />
-                <item
-                    android:offset="1" />
-            </gradient>
-        </aapt:attr>
-    </path>
+        android:strokeColor="#00000000" />
     <path
         android:fillColor="#fffefb"
         android:pathData="M16,3C12.5276,3 9.263,4.3522 6.8076,6.8076C4.3522,9.263 3,12.5276 3,16C3,19.4724 4.3522,22.737 6.8076,25.1924C9.263,27.6478 12.5276,29 16,29C19.4724,29 22.737,27.6478 25.1924,25.1924C27.6478,22.737 29,19.4724 29,16C29,12.5276 27.6478,9.263 25.1924,6.8076C22.737,4.3522 19.4724,3 16,3M16,0C24.8366,0 32,7.1634 32,16C32,24.8366 24.8366,32 16,32C7.1634,32 0,24.8366 0,16C0,7.1634 7.1634,0 16,0Z"
         android:strokeColor="#00000000" />
     <path
-        android:fillColor="#fff"
+        android:fillColor="#ffffff"
         android:pathData="M16.493,13.154l2.354,2.354L13.354,21L11,21L11,18.646L16.493,13.153ZM17.278,12.369 L18.455,11.192a0.555,0.555 0,0 1,0.785 0l1.57,1.57a0.555,0.555 0,0 1,0 0.785L19.631,14.723Z" />
 </vector>
