--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,6 @@
     <color name="bottom_nav_un_elected_icon">#787470</color>
     <color name="bottom_nav_fab_icon">#6DCAF2</color>
 
+    <color name="blue">#0062FF</color>
+
 </resources>
